--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,12 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-fantoccini = "0.11.7"
-futures = "0.1.28"
-tokio = "0.1.22"
+fantoccini = { version = "0.12.0", git = "https://github.com/jonhoo/fantoccini" , branch = "await"}
+tokio = "0.2.0-alpha.2"
 serde_json = "1.0.40"
 webdriver = "0.39.0" # NOTE: only need this due to needing "internal" error
 nom = "5.0.0"
 digital-duration-nom = { version = "0.1.0", git = "https://github.com/ctm/digital-duration-nom" }
 serde = { version = "1.0.94", features = ["derive"] }
 structopt = "0.2.18"
+async-trait = "0.1.10"
