--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,7 @@ structopt = "0.3.9"
 async-trait = "0.1.10"
 
 [dependencies.tokio]
-version = "0.3.3"
-features = ["macros", "rt-multi-thread"]
+# Can't use tokio 0.3.3 yet because fantoccini itself uses 0.2.22
+# version = "0.3.3"
+version = "0.2.22"
+features = ["macros", "time"]
