[Feat] Has code to get the Moab 240 results.  Seems to work.
Also uses anyhow and gets rid of all our panics and only adds a single
expect.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ digital-duration-nom = { version = "0.1.0", git = "https://github.com/ctm/digita
 serde = { version = "1.0.94", features = ["derive"] }
 structopt = "0.3.9"
 async-trait = "0.1.10"
+futures = "0.3.7"
+anyhow = "1.0"
 
 [dependencies.tokio]
 # Can't use tokio 0.3.3 yet because fantoccini itself uses 0.2.22
