--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,19 +7,16 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-fantoccini = "0.14"
-serde_json = "1.0.40"
-webdriver = "0.41.0" # NOTE: only need this due to needing "internal" error
-nom = "6"
-digital-duration-nom = { version = "0.2.0", git = "https://github.com/ctm/digital-duration-nom" }
-serde = { version = "1.0.94", features = ["derive"] }
-structopt = "0.3.9"
-async-trait = "0.1.10"
-futures = "0.3.7"
-anyhow = "1.0"
+fantoccini = "0.19.3"
+serde_json = "1.0.93"
+nom = "7.1.3"
+digital-duration-nom = { version = "0.4.0", git = "https://github.com/ctm/digital-duration-nom" }
+serde = { version = "1.0.152", features = ["derive"] }
+structopt = "0.3.26"
+async-trait = "0.1.64"
+futures = "0.3.26"
+anyhow = "1.0.69"
 
 [dependencies.tokio]
-# Can't use tokio 0.3.3 yet because fantoccini itself uses 0.2.22
-# version = "0.3.3"
-version = "0.2.22"
-features = ["macros", "time"]
+version = "1.25.0"
+features = ["macros", "time", "rt-multi-thread"]
