--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 fantoccini = "0.19.3"
 serde_json = "1.0.94"
 nom = "7.1.3"
-digital-duration-nom = { version = "0.4.0", git = "https://github.com/ctm/digital-duration-nom" }
+digital-duration-nom = { version = "0.5.0", git = "https://github.com/ctm/digital-duration-nom", features = ["serde"] }
 serde = { version = "1.0.156", features = ["derive"] }
 structopt = "0.3.26"
 async-trait = "0.1.66"
