--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ serde_json = "1.0.96"
 nom = "7.1.3"
 digital-duration-nom = { version = "0.5.0", git = "https://github.com/ctm/digital-duration-nom", features = ["serde"] }
 serde = { version = "1.0.162", features = ["derive"] }
-structopt = "0.3.26"
+clap = { version = "4.5", features = ["derive"] }
 async-trait = "0.1.68"
 futures = "0.3.28"
 anyhow = "1.0.71"
